syntax = "proto3";

package com.mobigen.datafabric.shared.protobuf;

option java_multiple_files = true;
option go_package= "github.com/datafabric/gateway/proto";

message HelloRequest {
  string firstName = 1;
  string lastName = 2;
}

message HelloResponse {
  string greeting = 1;
}

service HelloService {
  rpc hello(HelloRequest) returns (HelloResponse);
}
